Fix active and hover on tablet and desctop

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -49,7 +49,8 @@
 
 }
 
-.link:hover {
+.link:hover,
+.link:focus {
     color: var(--text-color);
     text-decoration: underline;
     text-decoration-thickness: 2px;
@@ -82,12 +83,12 @@
     }
 
     .link {
-        padding: 10px;
+        padding: 5px;
         justify-content: start;
     }
 
     .link:hover {
-        padding-left: 10px;
+        padding-left: 5px;
     }
 
 }
