--- a/src/index.css
+++ b/src/index.css
@@ -234,7 +234,7 @@ code {
   }
 
   .active {
-    padding: 10px;
+    padding: 5px;
   }
 }
 
